<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgplan_de_travail"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".Enregistrement">

    <TextView
        android:id="@+id/tv_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:fontFamily="@font/almarai_bold"
        android:text="@string/Sign_up_UP"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/ly_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fullName_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/Full_Name"
            android:backgroundTint="#AAA9A9"
            android:drawableEnd="@drawable/ic_baseline_person_24"
            android:drawablePadding="16dp"
            android:hint="@string/Full_Name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/Email"
            android:backgroundTint="#AAA9A9"
            android:drawableEnd="@drawable/ic_baseline_email_24"
            android:drawablePadding="16dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/Password"
            android:backgroundTint="#AAA9A9"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/confirmPassword_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/Confirm_Password"
            android:backgroundTint="#AAA9A9"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:hint="@string/Confirm_Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibri"
            android:text="@string/Sign_up_LO"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>